Se agrega Ruteos de los componentes y barra para navegar

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,25 +9,6 @@
     <title>Blog Template · Bootstrap </title>
 
     
-    
-
-    <!-- Bootstrap core CSS -->
-
-    <!--<style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>-->
 
     
     <!-- Custom styles for this template -->
@@ -35,27 +16,7 @@
     <!-- Custom styles for this template -->
   </head>
   <body>
-    
-<div class="container">
-  <header class="blog-header py-3">
-    <div class="row flex-nowrap justify-content-between align-items-center">
-      
-      <div class="col-2 d-flex justify-content-end align-items-center">
-        <a class="link-secondary" href="#" aria-label="Search">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
-        </a>
-        <a class="btn btn-sm btn-outline-secondary" href="#">Iniciar sesion</a>
-      </div>
-    </div>
-  </header>
-
-  <div class="nav-scroller py-1 mb-2">
-    <nav class="nav d-flex justify-content-between">
-      <a class="p-2 link-secondary" href="#">World</a>
-    </nav>
-  </div>
-</div>
-
+<br>
 <main class="container">
   <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
     <div class="col-md-6 px-0">
@@ -63,7 +24,7 @@
       <p class="lead my-3">Buscando un ammigo es una plataformmadonde las personas que buscan adoptar una mascota
         que han sido abandonadas o altratadas.
       </p>
-      <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continuar leyendo...</a></p>
+      <p class="lead mb-0"><a routerLink="/Acerca" class="text-white fw-bold">Continuar leyendo...</a></p>
     </div>
   </div>
 
@@ -74,11 +35,12 @@
           <strong class="d-inline-block mb-2 text-primary">¿Como adoptar?</strong>
           <h3 class="mb-0">Este puede ser un proceso que incluya:</h3>
           <p class="card-text mb-auto">solicitarte que llenes una solicitud con tus datos personales y motivos de adopción,</p>
-          <a href="#" class="stretched-link">Mas Información</a>
+          <a routerLink="/ComoAdoptar" class="stretched-link">Mas Información</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+          <img  width="200" height="250" src="https://estaticos.muyinteresante.es/media/cache/1140x_thumb/uploads/images/article/5f4e647d5cafe8e117b75536/1-adoptar-perro-refugio_1.jpg">
+          <!--<svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+          -->
         </div>
       </div>
     </div>
@@ -89,7 +51,7 @@
           <h3 class="mb-0">Post title</h3>
           <div class="mb-1 text-muted">Nov 11</div>
           <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="stretched-link">Mas Información</a>
+          <a routerLink="/ComoDarAdopcion" class="stretched-link">Mas Información</a>
         </div>
         <div class="col-auto d-none d-lg-block">
           <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
