--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,30 @@
-<app-home></app-home>ng 
+<nav class="navbar navbar-dark bg-dark" aria-label="First navbar example">
+    <div class="container-fluid">
+      <a class="navbar-brand" routerLink="/inicio">Buscando un amigo</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExample01">
+        <ul class="navbar-nav me-auto mb-2">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLink="/inicio" >Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/CatalagoAmigo">Catalagos Amigos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/ComoAdoptar">¿Como adoptar?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/ComoDarAdopcion">¿Como dar adoptar?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/ComoDarAdopcion">Acerca de ..</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    
+  </nav>
+  <router-outlet></router-outlet>
