--- a/src/app/catalago-amigos/catalago-amigos.component.html
+++ b/src/app/catalago-amigos/catalago-amigos.component.html
@@ -11,12 +11,67 @@
       </div>
     </div>
   </section>
+  
 
   <div class="album py-5 bg-light">
+    <div class = "filtro">
+      <h2 align="center">Filtro</h2>
+      
+      <div class="row g-4">
+        
+        <div class="col-sm">
+          Mascota
+          <select class="form-select" id="autoSizingSelect" >
+            <option  (click)="selecionaMascota(item)" *ngFor="let item of mascotas">
+              {{item}}
+            </option>
+          </select>
+        </div>
+        
+        <div class="col-sm">
+          Color
+          <select class="form-select" id="autoSizingSelect" >
+            <option  (click)="selecionaColor(item)" *ngFor="let item of colores">
+              {{item}}
+            </option>
+          </select>
+        </div>
+        <div class="col-sm">
+          Sexo
+          <select class="form-select" id="autoSizingSelect" >
+            <option  (click)="selecionaSexo(sexo[0])">
+              Todos
+            </option>
+            <option  (click)="selecionaSexo(sexo[1])">
+              Hembra
+            </option>
+            <option  (click)="selecionaSexo(sexo[2])">
+              Macho
+            </option>
+          </select>
+        </div>
+        <div class="col-sm">
+          <input type="text" class="form-control" placeholder="State" aria-label="State">
+        </div>
+        <div class="col-sm">
+          Edad minima
+          <input type="number" value=0 min="0" max="20" class="form-control" placeholder="0">
+          Edad maxima
+          <input type="number" value=20 min="0" max="20" class="form-control" placeholder="20">
+        </div>
+        
+        <div class="col-sm">
+          <input type="text" class="form-control" placeholder="Zip" aria-label="Zip">
+        </div>
+      </div>
+      <br>
+    </div>
+    
+    <br>
     <div class="container">
-
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        <div class="col" *ngFor="let item of amigo">
+      
+      <div class="row row-cols-2 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="col" *ngFor="let item of buscados">
           <div class="card shadow-sm">
             <img width="100%" height="225" src={{item.foto}}>
             
@@ -46,14 +101,14 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Mascota: {{nombre}}</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Mascota: {{amigo.nombre}}</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <img width="100%" height="225" src={{foto}}>
+        <img width="100%" height="225" src={{amigo.foto}}>
       </div>
       <div class="modal-footer">
-        <p>Numero Telefonico: {{numero}}      </p>
+        <p>Numero Telefonico: {{amigo.numero}}         </p>
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
         <!--<button type="button" class="btn btn-primary"></button>-->
       </div>
@@ -61,13 +116,5 @@
   </div>
 </div>
 
-<footer class="text-muted py-5">
-  <div class="container">
-    <p class="float-end mb-1">
-      <a href="#">Back to top</a>
-    </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
-  </div>
-</footer>
+
 
