Se agrega mas informacion de la mascota selecionada catalago amigos, se agrega proceso de adopcion, como dar en adopcion y acerca de. se cambia foter por uno mas simple

--- a/src/app/acerca/acerca.component.html
+++ b/src/app/acerca/acerca.component.html
@@ -1,1 +1,26 @@
-<p>acerca works!</p>
+<main role="main" class="container">
+    <div class="jumbotron" >
+      <h1>buscando un Amigo</h1>
+      <p class="lead">
+        Buscando un amigo es una plataforma donde la personas que buscan adoptar mascotas que han sido abandonadas o maltratados, se han perdido o, lamentablemente, sus dueños no pueden seguir atendiendo. 
+      </p>
+      <hr>
+      <br>
+      <h3>Objetivo</h3>
+      <p>
+        La recuperación física y psicológica de los animales que llegan a un albergue suele ser el primer
+        cometido al que se enfrentan sus miembros. A partir de aquí se espera que su estancia sea lo más breve
+        posible, ya que el objetivo final (y primordial) del albergue ha de ser encontrarles un hogar definitivo a
+        las mascotas, es decir, la adopción.
+        Para fomentar las adopciones, se planea hacer un sitio web atractivo donde la gente le de la
+        oportunidad a un animalito de tener un hogar.
+      </p>
+      <br>
+      
+      <h3>Ponte encontacto con nosotros:</h3>
+      <dl>
+        <dt>Para agendar una cita</dt>
+        <dd>marcanos a +59 000 000 000 o mandanos un correco y tu caso por que quieres dar en adopcion a una mascota</dd>
+     </dl>
+    </div>
+</main>
