--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,12 +28,11 @@
     
   </nav>
   <router-outlet></router-outlet>
-  <footer class="text-muted py-5">
-    <div class="container">
-      <p class="float-end mb-1">
-        <a href="#">Back to top</a>
-      </p>
-      <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-      <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
-    </div>
-  </footer>
+  <footer class="bg-light text-center text-lg-start">
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2022 Copyright:
+    <a class="text-dark" href="https://github.com/LagatitaUwU/BuscandoUnAmigoPets">Gabriela Abril Cardenas Calizaya</a>
+  </div>
+  <!-- Copyright -->
+</footer>
