--- a/src/app/como-dar-adopcion/como-dar-adopcion.component.html
+++ b/src/app/como-dar-adopcion/como-dar-adopcion.component.html
@@ -1,1 +1,23 @@
-<p>como-dar-adopcion works!</p>
+<main role="main" class="container">
+    <div class="jumbotron">
+      <h1>Requisitos para dar en adopcion a una mascota</h1>
+      <p class="lead">¿Te estás planteando dar en adopcion una mascota? encontrastes o rescatastes mascota y no puedes quedarte con ella. Conoce cuáles son los pasos que debes seguir.</p>
+      <hr>
+      Son muchos los animales que necesitan tu ayuda. Mascotas abandonadas, heridas o maltratadas están a la espera de una casa de acogida que les quiera. Si te comprometes a ser un buen dueño y estás decidido a adoptar puedes consultar la web de protectoras de animales y acudir a los centros de acogida. Descubre cómo funciona la política de adopción de estas asociaciones.
+      <br>
+      <br>
+      <h3>Requisitos para dar en adopcion una mascota:</h3>
+      <dl>
+        <dt>Ser mayor de edad</dt>
+        <dd>Se presentará el DNI de identificación</dd>
+        <dt>Cuidar la mascota</dt>
+        <dd>En el caso que se necesario esperar en lo que encuentra un amigo</dd>
+       </dl>
+
+      <h3>Ponte encontacto con nosotros:</h3>
+      <dl>
+        <dt>Para agendar una cita</dt>
+        <dd>marcanos a +59 000 000 000 o mandanos un correco y tu caso por que quieres dar en adopcion a una mascota</dd>
+     </dl>
+    </div>
+</main>
